--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
   },
   "homepage": "https://github.com/jcollado/npm-visualize-dependencies#readme",
   "devDependencies": {
-    "cz-conventional-changelog": "1.1.5"
+    "cz-conventional-changelog": "1.1.5",
+    "ghooks": "1.0.3",
+    "validate-commit-msg": "1.1.1"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    },
+    "ghooks": {
+      "commit-msg": "validate-commit-msg"
     }
   }
 }
