feat(index): Add basic implementation
For now just generates an object with all dependencies found in the filesystem

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "Generate graphviz file to visualize dependencies of a package",
   "main": "index.js",
+  "bin": {
+    "npm-visualize-dependencies": "index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -33,5 +36,8 @@
     "ghooks": {
       "commit-msg": "validate-commit-msg"
     }
+  },
+  "dependencies": {
+    "promisify-object": "1.1.0"
   }
 }
