--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm-visualize-dependencies": "index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,11 @@
   },
   "homepage": "https://github.com/jcollado/npm-visualize-dependencies#readme",
   "devDependencies": {
+    "ava": "0.11.0",
     "cz-conventional-changelog": "1.1.5",
     "ghooks": "1.0.3",
+    "require-inject": "1.3.0",
+    "sinon": "1.17.2",
     "validate-commit-msg": "1.1.1"
   },
   "config": {
