--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "npm-visualize-dependencies": "index.js"
   },
   "scripts": {
-    "cover": "nyc --all ava && nyc report --reporter=html",
+    "cover": "nyc --all ava",
+    "coveralls": "npm run cover && npm run report:text | coveralls",
+    "report:html": "nyc report --reporter=html",
+    "report:text": "nyc report --reporter=text-lcov",
     "test": "ava"
   },
   "repository": {
@@ -27,6 +30,7 @@
   "homepage": "https://github.com/jcollado/npm-visualize-dependencies#readme",
   "devDependencies": {
     "ava": "0.11.0",
+    "coveralls": "2.11.6",
     "cz-conventional-changelog": "1.1.5",
     "ghooks": "1.0.3",
     "nyc": "5.5.0",
@@ -42,7 +46,9 @@
       "commit-msg": "validate-commit-msg"
     },
     "nyc": {
-      "include": ["src/*.js"]
+      "include": [
+        "src/*.js"
+      ]
     }
   },
   "dependencies": {
